Fix title too long

--- a/src/style/include/photo-swipe.styl
+++ b/src/style/include/photo-swipe.styl
@@ -1,17 +1,11 @@
 @import '../../node_modules/material-colors/dist/colors.styl'
 
 #pswp {
-  .pswp__bg, .pswp__top-bar {
+  .pswp__bg {
     background-color: #212121;
   }
   
-  .pswp__button--arrow--left, .pswp__button--arrow--right {
-    
-    
-    &:before {
-      
-      &:hover {
-      }
-    }
+  .pswp__top-bar {
+    background-color: rgba(0, 0, 0, .12);
   }
 }
